fix issue with main content not stretching to full screen height

--- a/public/stylesheets/dashboard-main.css
+++ b/public/stylesheets/dashboard-main.css
@@ -3,19 +3,25 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+html{
+    height: 100%;
+}
 body {
+    height: 100%;
     background-color: #f8f8f8;
 }
 #wrapper {
     width: 100%;
+    height:100%;
 }
 #page-wrapper {
     padding: 0 15px;
-    min-height: 568px;
+    min-height: calc(100% - 50px);
     background-color: white;
 }
 @media (min-width: 768px) {
     #page-wrapper {
+        height: calc(100% - 100px);
         position: inherit;
         margin: 0 0 0 250px;
         padding: 0 30px;
